--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<html>
+  <head>
+    <title>calculadora de indice de masa corporal</title>
+  </head>
+  <body>
+    <h1> calculadora IMC:indece de masa corporal</h1>
+    <h2> class="headertwo">
+      registra los siguientes datos:</h2>
+      <p class "headertwo">talla:
+        >imput type ="text"placeholder="en mts".
+        id=altura"></P>
