--- a/index.html
+++ b/index.html
@@ -9,3 +9,10 @@
       <p class "headertwo">talla:
         >imput type ="text"placeholder="en mts".
         id=altura"></P>
+  
+<button type="button" on(link="getlMac)">Calcular
+  <p>SU IMC es:<a id="inc">0</a></p>
+  </body>
+</html>
+
+  
